se agrego sass al proyecto

--- a/css/main.css
+++ b/css/main.css
@@ -1,126 +1,1 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.encabezado{
-    padding: 1rem;
-    border-style:outset;
-    border-color: black;
-    border-radius: 8px;
-    background-color: red;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 1rem;
-}
-
-.logo{
-    width: 8rem;
-    background-color: red;
-}
-
-.titulo-principal{
-    margin: 0 auto;
-}
-
-.lista-principal{
-    list-style-type: none;
-    display: flex;
-    text-align: center;
-    background-color: red;
-    margin: 0 auto;
-}
-
-ul li a:hover{
-    background-color: rgb(1, 1,70);
-    color: white;
-    border-radius: 8px;
-    font-size: 18px;
-    transition: 0.5s;
-    padding: 5px;
-}
-
-header a{
-    text-decoration: none;
-    color: black;
-    background-color: red;
-    padding: 0px;
-    margin: 30px;
-
-}
-
-footer{
-    padding: 20px;
-    margin: 20px;
-    text-align: end;
-    background-color: rgb(1, 1,70);
-    border: 4rem;
-    border-radius: 8px;
-}
-
-footer a{
-    color: white;
-    text-decoration: none;
-    background-color: rgb(1, 1,70);
-}
-
-a:hover{
-    background-color: red;
-    color: black;
-    border-radius: 8px;
-    font-size: 18px;
-    transition: 0.5s;
-    padding: 5px;
-}
-
-.atajan{
-    width: 5rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 1rem;
-}
-
-.defensores{
-    width: 300px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 1rem;
-}
-
-.medio-campo{
-    width: 300px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 1rem;
-}
-
-.delantera{
-    width: 300px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 1rem;
-}
-
-.cuerpo-pagina{
-    margin: 4rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.equipo-1{
-    width: 100%;
-}
-
-.estadio-1{
-    width: 100%;
-}
-
-.historia-club{
-    display: flex;
-}
+*{margin:0;padding:0;box-sizing:border-box}.encabezado{padding:1rem;border-style:outset;border-color:#000;border-radius:8px;background-color:red;display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:1rem}.logo{width:8rem;background-color:red}.titulo-principal{margin:0 auto}.lista-principal{list-style-type:none;display:flex;text-align:center;background-color:red;margin:0 auto}ul li a:hover{background-color:#010146;color:#fff;border-radius:8px;font-size:18px;transition:.5s;padding:5px}header a{text-decoration:none;color:#000;background-color:red;padding:0px;margin:30px}footer{padding:20px;margin:20px;text-align:end;background-color:#010146;border:4rem;border-radius:8px}footer a{color:#fff;text-decoration:none;background-color:#010146}a:hover{background-color:red;color:#000;border-radius:8px;font-size:18px;transition:.5s;padding:5px}.atajan{width:5rem;display:flex;flex-direction:row;flex-wrap:nowrap;gap:1rem}.defensores{width:300px;display:flex;flex-direction:row;flex-wrap:nowrap;gap:1rem}.medio-campo{width:300px;display:flex;flex-direction:row;flex-wrap:nowrap;gap:1rem}.delantera{width:300px;display:flex;flex-direction:row;flex-wrap:nowrap;gap:1rem}.cuerpo-pagina{margin:4rem;font-family:Verdana,Geneva,Tahoma,sans-serif}.equipo-1{width:100%}.estadio-1{width:100%}.historia-club{display:flex}/*# sourceMappingURL=main.css.map */
