--- a/main.scss
+++ b/main.scss
@@ -1,7 +1,15 @@
+$color-principal:rgb(1, 1,70);
+$color-secundario:red;
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+h1{
+    font-family: "Josefin Sans", sans-serif;
+    margin: 0 auto;
 }
 
 .encabezado{
@@ -9,108 +17,75 @@
     border-style:outset;
     border-color: black;
     border-radius: 8px;
-    background-color: red;
+    background-color: $color-secundario;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 1rem;
+    .logo{
+        width: 8rem;
+        background-color: $color-secundario;
+    }
+    .titulo-principal{
+        margin: 0 auto;
+        font-family: "Josefin Sans", sans-serif;
+    }
+    .lista-principal{
+        font-family: "Roboto Condensed", sans-serif;
+        list-style-type: none;
+        display: flex;
+        text-align: center;
+        background-color: $color-secundario;
+        margin: 0 auto;
+    }
+    ul li a:hover{
+        background-color: $color-principal;
+        color: white;
+        border-radius: 8px;
+        font-size: 18px;
+        transition: 0.5s;
+        padding: 5px;
+    }
 }
 
-.logo{
-    width: 8rem;
-    background-color: red;
-}
-
-.titulo-principal{
-    margin: 0 auto;
-}
-
-.lista-principal{
-    list-style-type: none;
-    display: flex;
-    text-align: center;
-    background-color: red;
-    margin: 0 auto;
-}
-
-ul li a:hover{
-    background-color: rgb(1, 1,70);
-    color: white;
-    border-radius: 8px;
-    font-size: 18px;
-    transition: 0.5s;
-    padding: 5px;
-}
 
 header a{
+    font-family: "Roboto Condensed", sans-serif;
     text-decoration: none;
     color: black;
-    background-color: red;
+    background-color: $color-secundario;
     padding: 0px;
     margin: 30px;
 
 }
 
 footer{
+    font-family: "Roboto Condensed", sans-serif;
     padding: 20px;
     margin: 20px;
     text-align: end;
-    background-color: rgb(1, 1,70);
+    background:linear-gradient(to right, $color-secundario, $color-principal);
     border: 4rem;
     border-radius: 8px;
-}
-
-footer a{
-    color: white;
-    text-decoration: none;
-    background-color: rgb(1, 1,70);
-}
-
-a:hover{
-    background-color: red;
-    color: black;
-    border-radius: 8px;
-    font-size: 18px;
-    transition: 0.5s;
-    padding: 5px;
-}
-
-.atajan{
-    width: 5rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 1rem;
-}
-
-.defensores{
-    width: 300px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 1rem;
-}
-
-.medio-campo{
-    width: 300px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 1rem;
-}
-
-.delantera{
-    width: 300px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 1rem;
+    a{
+        color: white;
+        text-decoration: none;
+    }  
+    a:hover{
+        background-color: $color-secundario;
+        color: black;
+        border-radius: 8px;
+        font-size: 18px;
+        transition: 0.5s;
+        padding: 5px;
+    }
 }
 
 .cuerpo-pagina{
     margin: 4rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
+
 }
 
 .equipo-1{
@@ -122,5 +97,20 @@ a:hover{
 }
 
 .historia-club{
+    display: flex;
+}
+
+.efecto-carousel{
+    width: 600px;
+    margin: 0 auto;
+}
+
+.jugadores{
+    width: 300px;
+    margin-top: 20px;
+}
+
+.plano-estadio{
+    width: 500px;  
     display: flex;
 }
